--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- 添加MySQL依赖 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!-- 添加JDBC依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
